[project]
name = "stevie-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nico Pretorius", email = "info@nicopretorius.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
stevie-explorer = "stevie_explorer:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mpy>=0.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
